--- a/src/resources/views/commics/comic.handlebars
+++ b/src/resources/views/commics/comic.handlebars
@@ -128,24 +128,56 @@
                 <div>
                     <textarea id="maincontent-cmt" wrap="hard"></textarea>
                    <div>
-                     <button onclick="sendcommentcomic({{comics.topiccomment_id}})">Gửi</button>
+                     <button onclick="sendcommentcomic('{{comics.topiccomment_id}}',null,false)">Gửi</button>
                    </div>
                 </div>
            </div>
            <div class="comment-list">
+                {{#each comment}}               
                 <div class="comment-item">
                     <div class="comment-item__avt">
-                        <img src="../../../public/image/avatar/avt.jpg" alt="">
+                        <img src="../../../public/image/avatar/{{this.avatar}}" alt="">
                     </div>
                     <div class="comment-item__content">
                         <div class="content_name">
-                            <p>lmao<span>lmao</span></p>
+                            <p>{{this.username}}<span>{{this.timecmt}}</span></p>
                         </div>
                         <div class="content_cmt">
-                            <p>sfgdsgaousdfh9osdfjsidfj0iapsdfjopsadfopisdf</p>
+                            <p>{{this.content}}</p>
+                        </div>
+                         <div class="content_rep">
+                            <button onclick="showreply('rep-{{this.id}}')">Trả lời</button>
+                        </div>
+                        <div class="reply" id="rep-{{this.id}}">
+                            <div class="rep-comment">
+                                    <textarea id="maincontent-{{this.id}}" wrap="hard"></textarea>
+                                <div>
+                                    <button onclick="sendcommentcomic('{{../comics.topiccomment_id}}',{{this.id}},true)">Gửi</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="repcmtlist" id="repcmtlist-{{this.id}}">
+                            {{#each ../repcomment}}
+                             {{#same this.parent_id ../this.id}}
+                            <div class="repcmt--item">
+                                <div class="comment-item__avt">
+                                    <img src="../../../public/image/avatar/{{this.avatar}}" alt="">
+                                </div>
+                                <div class="comment-item__content">
+                                    <div class="content_name">
+                                        <p>{{this.username}}<span>{{this.timecmt}}</span></p>
+                                    </div>
+                                    <div class="content_cmt">
+                                        <p>{{this.content}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                            {{/same}}
+                            {{/each}}
                         </div>
                     </div>
                 </div>
+                 {{/each}}
            </div>
         </div>
     </div>
