--- a/src/resources/views/api-ajax/changechapter.handlebars
+++ b/src/resources/views/api-ajax/changechapter.handlebars
@@ -1,4 +1,6 @@
 {{#each chapter.uri}}
+<div class="chapterid" value="{{../chapter.id}}"></div>
+<div class="chaptertoken" value="{{../token}}"></div>
     <div class="chapter--header__item">
         <img class="item" src="/public/image/chapter/{{../chapter.id}}/{{this}}" alt="">
     </div>
