--- a/src/resources/views/user/layouts/main.handlebars
+++ b/src/resources/views/user/layouts/main.handlebars
@@ -17,8 +17,13 @@
     {{#if num}}
         console.log({{num}})
   
-        addpagecontroller({{num}})
+        addpagecontroller({{num}}/20)
     {{/if}}
-</script>
+
+    getmaincomic(0)
+    gettopuser()
+    gettophot()
+    gettopcomic()
+    </script>
 </body>
 </html>
