--- a/src/resources/views/user/home.handlebars
+++ b/src/resources/views/user/home.handlebars
@@ -1,32 +1,10 @@
 {{>header cookies=cookies}}
-<div class="main grid">
+<div class="main grid" onload="alert("hello")">
     <div class="main-container grid wide">
         <div class="main-container__topcomic" >
             <div>
                 <h2>Truyện HOT   </h2>
-                <div class="error-message">{{ token }} </div>
                 <div class="topcomic__list row no-gutters" id="main__topcomic">
-                    {{#each bannercomic}}
-                    <div class="topcomic__item col l-2__4 m-2__4 c-4">
-                        <div>
-                            <div class="topcomic__item__img">
-                                <a href="/comic/{{this.id}}">
-                                    <img src="/public/image/comic/{{this.image}}" alt="">
-                                </a>
-                            </div>
-                            <div class="topcomic__item__info">
-                                <a href="/comic/{{this.id}}">{{this.name}}</a>
-                                    {{!-- <div>
-                                        <a href="" class="col l-6"></a>
-                                        <div class="col l-6">
-                                            <i class="fa-solid fa-clock"></i>
-                                            <span></span>
-                                        </div>
-                                    </div> --}}
-                            </div>
-                        </div>
-                    </div>
-                    {{/each}}
                 </div>
                 <div class="topcomic__nextleft" id="nextleft" onclick="dashleft()"><i class="fa-solid fa-angle-left"></i></div>
                 <div class="topcomic__nextright " id="nextright" onclick="dashright()"><i class="fa-solid fa-angle-right"></i></div>
@@ -43,62 +21,14 @@
                     </div>
                     <div class="listcomic--main">
                         <div class="listcomic grid row">
-                            
-                            {{#each comics}}
-                            <div class="listcomic--item l-3 m-3 c-4">
-                                <div class="item">
-                                    <div class="item--top">
-                                        <div class="item--top__img">
-                                            <a href="/comic/{{id}}"><img src="/public/image/comic/{{image}}" alt=""></a>
-                                        </div>
-                                        <div class="iteam--top__info">
-                                            <span>
-                                                <i>
-                                                    <i class="fa-solid fa-eye"></i>
-                                                    <span>{{this.views}}</span>
-                                                </i>
-                                                <i>
-                                                    <i class="fa-solid fa-comment"></i>
-                                                    <span>500k</span>
-                                                </i>
-                                                <i>
-                                                    <i class="fa-solid fa-heart"></i>
-                                                    <span>500k</span>
-                                                </i>
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <div class="item--bottom">
-                                        <div class="item--bottom__name">
-                                            <a>{{this.name}}</a>
-                                        </div>
-                                        <div class="item--bottom__listchapter">
-                                           <ul>
-                                                 {{!-- {{#each listchap}}
-                                                    {{#with this}}
-                                                    <li>
-                                                        <a href="{{id}}">{{name}}</a>
-                                                        <i>28/08/21</i>
-                                                    </li>
-                                                    {{/with}}
-                                                    {{/each}} --}}
-                                                    
-                                                </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            {{/each}}
-
-                            
+                      
                         </div>
                     </div>
                     <div class="listcomic--footer">
                         <div class="listcomic--page">
                             <ul class="list--page" id="list--page">
                                 
-{{!--                                
-                                <li class="page"><i class="fa-solid fa-angle-right"></i></li>
+                                {{!--  <li class="page"><i class="fa-solid fa-angle-right"></i></li>
                                 <li class="page"><i class="fa-solid fa-angles-right"></i></li> --}}
                             </ul>
                             <div class="anotherpage" id="showanotherpage">
@@ -127,24 +57,8 @@
                             </div> --}}
                         </div>
                         <div class="topcomic--list">
-                            <ul>
-                                {{#each topcomic}}
-                                <li class="topcomic--item">
-                                    <div class="topcomic--item__number">
-                                        <span class="topcomicweb">{{indexup @index}}</span>
-                                    </div>
-                                    <div class="topcomic--item__img">
-                                        <a href="/comic/{{this.id}}"><img src="/public/image/comic/{{this.image}}" alt="top truyen"></a>
-                                    </div>
-                                    <div class="topcomic--item__info">
-                                        <a href="/comic/{{this.id}}">{{this.name}}</a>
-                                        <div>
-                                            {{!-- <a href="">Chapter 126</a> --}}
-                                            <i><i class="fa-solid fa-eye"></i>{{this.views}}</i>
-                                        </div>
-                                    </div>
-                                </li>
-                                {{/each}}
+                            <ul class="topcomic--bind">
+                                
                             </ul>
                         </div>
                     </div>
@@ -153,25 +67,7 @@
                             <p>Top thành viên</p>
                         </div>
                         <div class="topmember--list">
-                            <ul>
-                                {{#each topuser}}
-                                <li class="member">
-                                    <div class="member--number">
-                                        <span class="topuserweb">{{indexup @index}}</span>
-                                    </div>
-                                    <div class="member--avatar">
-                                        <img src="/public/image/avatar/{{this.avatar}}" alt="top">
-                                    </div>
-                                    <div class="member--info">
-                                        <div class="member--info__name">
-                                            <p>{{this.username}}</p>
-                                        </div>
-                                        <div class="member--info__leve">
-                                            <p>Point: {{this.Point}}</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                {{/each}}
+                            <ul class="topmember--bind">
                             </ul>
                         </div>
                     </div>
@@ -180,4 +76,6 @@
         </div>
     </div>
 </div>
+
+
 {{>footer}}
